--- a/notebooks/13_parallel_jobs.qmd
+++ b/notebooks/13_parallel_jobs.qmd
@@ -12,7 +12,7 @@ from: markdown+emoji
 
 ## Introduction
 
-In this section, we will discuss how you can run parallel jobs on Gadi using the `nci-parralel` utility in place of the Artemis job array method. 
+In this section, we will discuss how you can run parallel jobs on Gadi using the `nci-parallel` utility in place of the Artemis job array method. 
 
 The main challenges users may face adapting Artemis workflows to Gadi are:
 
